--- a/style/style.css
+++ b/style/style.css
@@ -21,12 +21,13 @@ a{
 }
  
 
-.telephone:: before{
+.telephone: before{
     content: '';
-    background: url(../images/em.png) ;
+    background: url(../images/em.png);
     width: 15px;
     height: 15px; 
     top: 12px;
+    background-size: cover;
     position: absolute;
     display: block;
 }
