--- a/style/style.css
+++ b/style/style.css
@@ -86,9 +86,16 @@ a{
    
 }
 .menu li{
-    margin-right: 20px; 
+    margin-right: 30px; 
     padding-bottom: 3px;
     margin-top: 10px;
     display: inline-block;
   
+}
+
+.menu ul{
+    margin: 0;
+    margin-left: 20px;
+    padding: 0px;
+    
 }
