--- a/style/style.css
+++ b/style/style.css
@@ -34,9 +34,7 @@ a{
     margin-top: 24px;
     margin-right: 60px;        
 }
-.telephone{
-    //увеличить шрифт и опустить пониже
-}
+
  
 .telephone:before {
     content: '';
@@ -116,16 +114,16 @@ a{
 
 .main{
 width: 100%; 
-position: absolute; 
+/*position: absolute;*/ 
 background: linear-gradient(to top, #ffffff, #bcbcba);
 height: 500px; 
-z-index: -1;      
+padding-top: 50px;   
 }
 
 .container{
     width: 1070px;
     margin: 0 auto;
-    margin-top: 50px;
+   
 }
 
 .column{
@@ -173,4 +171,18 @@ button:hover{
 .clearfix {
     clear: both;
 }
-
+.item{
+        width: 240px;
+    height: 320px;
+    float: left;
+    margin: 4px;
+    text-align: center;
+}
+.item_img{
+    width: 240px;
+    height: 240px;
+    background-size: contain;
+}
+.item_text{
+    vertical-align: middle;
+}
